ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/lib/src/ffi/ido_protocol_ffi.g.dart


  /// ------------------------------ 制作文件 ------------------------------
  /// /**
  ///  * @brief 图片压缩
  ///  * @param fileName 输入图片路径(包含文件名及后缀)
  ///  * @param endName 输出图片后缀名(.sport)
  ///  * @param format 图片格式
  ///  * @return:
  ///  *   SUCCESS(0) : 成功
  ///  *
  ///  * format图片格式详情
  ///  * {
  ///  *  #define FONT_FORMAT_ALPHA_MASK		(1 << 7)
  ///  *   #define FONT_FORMAT_SWAP_COLOR		(1 << 6)
  ///  *
  ///  *  #define FONT_FORMAT_NONE		0	//无效
  ///  *  #define FONT_FORMAT_RGB111		1
  ///  *  #define FONT_FORMAT_BGR111		(FONT_FORMAT_RGB111 | FONT_FORMAT_SWAP_COLOR)
  ///  *  #define FONT_FORMAT_ARGB111		(FONT_FORMAT_RGB111 | FONT_FORMAT_ALPHA_MASK)
  ///  *  #define FONT_FORMAT_ABGR111		(FONT_FORMAT_BGR111 | FONT_FORMAT_ALPHA_MASK)
  ///  *
  ///  *  #define FONT_FORMAT_RGB222		2
  ///  *  #define FONT_FORMAT_BGR222		(FONT_FORMAT_RGB222 | FONT_FORMAT_SWAP_COLOR)
  ///  *  #define FONT_FORMAT_ARGB222		(FONT_FORMAT_RGB222 | FONT_FORMAT_ALPHA_MASK)
  ///  *  #define FONT_FORMAT_ABGR222		(FONT_FORMAT_BGR222 | FONT_FORMAT_ALPHA_MASK)
  ///  *
  ///  *  #define FONT_FORMAT_RGB565		5
  ///  *  #define FONT_FORMAT_BGR565		(FONT_FORMAT_RGB565 | FONT_FORMAT_SWAP_COLOR)
  ///  *  #define FONT_FORMAT_ARGB565		(FONT_FORMAT_RGB565 | FONT_FORMAT_ALPHA_MASK)
  ///  *  #define FONT_FORMAT_ABGR565		(FONT_FORMAT_BGR565 | FONT_FORMAT_ALPHA_MASK)
  ///  *
  ///  *  #define FONT_FORMAT_RGB888		8
  ///  *  #define FONT_FORAMT_BGR888		(FONT_FORMAT_RGB888 | FONT_FORMAT_SWAP_COLOR)
  ///  *  #define FONT_FORMAT_ARGB888		(FONT_FORMAT_RGB888 | FONT_FORMAT_ALPHA_MASK)
  ///  *  #define FONT_FORAMT_ABGR888		(FONT_FORAMT_BGR888 | FONT_FORMAT_ALPHA_MASK)
  ///  *
  ///  *  #define FONT_FORMAT_MONO1		100 //单色 1bit
  ///  *  #define FONT_FORMAT_MONO2		101 //单色 2bit
  ///  *  #define FONT_FORMAT_MONO4		102 //单色 4bit
  ///  *  #define FONT_FORMAT_MONO8		103 //单色 8bit
  ///  *  #define FONT_FORMAT_AUTO		0xff//自动模式,如果是8bit图片,采用4bit取模,或者采用rgb,或者rgba取模
  ///  * }
  ///  *
  ///  */
  int makeFileCompression(
    ffi.Pointer<ffi.Char> fileName,
    ffi.Pointer<ffi.Char> endName,
    int format,
  ) {
    return _makeFileCompression(
      fileName,
      endName,
      format,
    );
  }

  late final _makeFileCompressionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('makeFileCompression');
  late final _makeFileCompression = _makeFileCompressionPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  /// @brief 制作压缩多张运动图片
  /// @param fileName 输入图片路径(包含文件名及后缀)
  /// @param endName 输出图片后缀名(.sports)
  /// @param format 图片格式
  /// @param pic_num 图片个数
  /// @return:
  /// SUCCESS(0) : 成功
  ///
  /// format图片格式详情
  /// {
  /// #define FONT_FORMAT_ALPHA_MASK		(1 << 7)
  /// #define FONT_FORMAT_SWAP_COLOR		(1 << 6)
  ///
  /// #define FONT_FORMAT_NONE		0	//无效
  /// #define FONT_FORMAT_RGB111		1
  /// #define FONT_FORMAT_BGR111		(FONT_FORMAT_RGB111 | FONT_FORMAT_SWAP_COLOR)
  /// #define FONT_FORMAT_ARGB111		(FONT_FORMAT_RGB111 | FONT_FORMAT_ALPHA_MASK)
  /// #define FONT_FORMAT_ABGR111		(FONT_FORMAT_BGR111 | FONT_FORMAT_ALPHA_MASK)
  ///
  /// #define FONT_FORMAT_RGB222		2
  /// #define FONT_FORMAT_BGR222		(FONT_FORMAT_RGB222 | FONT_FORMAT_SWAP_COLOR)
  /// #define FONT_FORMAT_ARGB222		(FONT_FORMAT_RGB222 | FONT_FORMAT_ALPHA_MASK)
  /// #define FONT_FORMAT_ABGR222		(FONT_FORMAT_BGR222 | FONT_FORMAT_ALPHA_MASK)
  ///
  /// #define FONT_FORMAT_RGB565		5
  /// #define FONT_FORMAT_BGR565		(FONT_FORMAT_RGB565 | FONT_FORMAT_SWAP_COLOR)
  /// #define FONT_FORMAT_ARGB565		(FONT_FORMAT_RGB565 | FONT_FORMAT_ALPHA_MASK)
  /// #define FONT_FORMAT_ABGR565		(FONT_FORMAT_BGR565 | FONT_FORMAT_ALPHA_MASK)
  ///
  /// #define FONT_FORMAT_RGB888		8
  /// #define FONT_FORAMT_BGR888		(FONT_FORMAT_RGB888 | FONT_FORMAT_SWAP_COLOR)
  /// #define FONT_FORMAT_ARGB888		(FONT_FORMAT_RGB888 | FONT_FORMAT_ALPHA_MASK)
  /// #define FONT_FORAMT_ABGR888		(FONT_FORAMT_BGR888 | FONT_FORMAT_ALPHA_MASK)
  ///
  /// #define FONT_FORMAT_MONO1		100 //单色 1bit
  /// #define FONT_FORMAT_MONO2		101 //单色 2bit
  /// #define FONT_FORMAT_MONO4		102 //单色 4bit
  /// #define FONT_FORMAT_MONO8		103 //单色 8bit
  /// #define FONT_FORMAT_AUTO		0xff//自动模式,如果是8bit图片,采用4bit取模,或者采用rgb,或者rgba取模
  /// }
  int makeSportFileCompression(
    ffi.Pointer<ffi.Char> fileName,
    ffi.Pointer<ffi.Char> endName,
    int format,
    int pic_num,
  ) {
    return _makeSportFileCompression(
      fileName,
      endName,
      format,
      pic_num,
    );
  }

  late final _makeSportFileCompressionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int, ffi.Int)>>('makeSportFileCompression');
  late final _makeSportFileCompression =
      _makeSportFileCompressionPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int)>();

  /// @brief 制作(IWF)文件 根据表盘包获取到IWF文件且返回生成的iwf文件大小
  /// @param file_path 素材路径
  /// @param save_file_name 文件名
  /// @param format 取模图片的格式
  /// @return:{1失败,IWF文件大小 成功}
  int mkWatchDialFile(
    ffi.Pointer<ffi.Char> file_path,
    ffi.Pointer<ffi.Char> save_file_name,
    int format,
  ) {
    return _mkWatchDialFile(
      file_path,
      save_file_name,
      format,
    );
  }

  late final _mkWatchDialFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('mkWatchDialFile');
  late final _mkWatchDialFile = _mkWatchDialFilePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  /// @brief:制作表盘压缩文件(iwf.lz) 压缩文件会自动添加文件名.lz后缀
  /// @param file_path 素材路径
  /// @param save_file_name 文件名
  /// @param format 取模图片的格式
  /// {
  /// #define FONT_FORMAT_ALPHA_MASK		(1 << 7)
  /// #define FONT_FORMAT_SWAP_COLOR		(1 << 6)
  ///
  /// #define FONT_FORMAT_NONE		0	//无效
  /// #define FONT_FORMAT_RGB111		1
  /// #define FONT_FORMAT_BGR111		(FONT_FORMAT_RGB111 | FONT_FORMAT_SWAP_COLOR)
  /// #define FONT_FORMAT_ARGB111		(FONT_FORMAT_RGB111 | FONT_FORMAT_ALPHA_MASK)
  /// #define FONT_FORMAT_ABGR111		(FONT_FORMAT_BGR111 | FONT_FORMAT_ALPHA_MASK)
  ///
  /// #define FONT_FORMAT_RGB222		2
  /// #define FONT_FORMAT_BGR222		(FONT_FORMAT_RGB222 | FONT_FORMAT_SWAP_COLOR)
  /// #define FONT_FORMAT_ARGB222		(FONT_FORMAT_RGB222 | FONT_FORMAT_ALPHA_MASK)
  /// #define FONT_FORMAT_ABGR222		(FONT_FORMAT_BGR222 | FONT_FORMAT_ALPHA_MASK)
  ///
  /// #define FONT_FORMAT_RGB565		5
  /// #define FONT_FORMAT_BGR565		(FONT_FORMAT_RGB565 | FONT_FORMAT_SWAP_COLOR)
  /// #define FONT_FORMAT_ARGB565		(FONT_FORMAT_RGB565 | FONT_FORMAT_ALPHA_MASK)
  /// #define FONT_FORMAT_ABGR565		(FONT_FORMAT_BGR565 | FONT_FORMAT_ALPHA_MASK)
  ///
  /// #define FONT_FORMAT_RGB888		8
  /// #define FONT_FORAMT_BGR888		(FONT_FORMAT_RGB888 | FONT_FORMAT_SWAP_COLOR)
  /// #define FONT_FORMAT_ARGB888		(FONT_FORMAT_RGB888 | FONT_FORMAT_ALPHA_MASK)
  /// #define FONT_FORAMT_ABGR888		(FONT_FORAMT_BGR888 | FONT_FORMAT_ALPHA_MASK)
  ///
  /// #define FONT_FORMAT_MONO1		100 //单色 1bit
  /// #define FONT_FORMAT_MONO2		101 //单色 2bit
  /// #define FONT_FORMAT_MONO4		102 //单色 4bit
  /// #define FONT_FORMAT_MONO8		103 //单色 8bit
  /// #define FONT_FORMAT_AUTO		0xff//自动模式,如果是8bit图片,采用4bit取模,或者采用rgb,或者rgba取模
  /// }
  /// @param block_size 压缩块大小{1024,4096}
  /// @return:SUCCESS(0)成功,ERROR_NULL(14)文件路径打开失败
  int mkWatchDialFileCompression(
    ffi.Pointer<ffi.Char> file_path,
    ffi.Pointer<ffi.Char> save_file_name,
    int format,
    int block_size,
  ) {
    return _mkWatchDialFileCompression(
      file_path,
      save_file_name,
      format,
      block_size,
    );
  }

  late final _mkWatchDialFileCompressionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int, ffi.Int)>>('mkWatchDialFileCompression');
  late final _mkWatchDialFileCompression =
      _mkWatchDialFileCompressionPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int)>();

  /// @brief 制作(EPO.DAT/.pgl)文件
  /// @param file_path 素材路径
  /// @param save_file_name 输出文件名,一般为EPO.DAT/.pgl
  /// @param file_count 需要合并的文件个数，如果跟实际文件夹内个数不一致就报错,错误码ERROR_INVALID_PARAM(7)
  /// @return SUCCESS(0),成功,ERROR_INVALID_PARAM(7),EPO文件过期ERROR_INVAILD_FILE (27)
  int mkEpoFile(
    ffi.Pointer<ffi.Char> file_path,
    ffi.Pointer<ffi.Char> save_file_name,
    int file_count,
  ) {
    return _mkEpoFile(
      file_path,
      save_file_name,
      file_count,
    );
  }

  late final _mkEpoFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('mkEpoFile');
  late final _mkEpoFile = _mkEpoFilePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  /// @brief 图片转换格式 png->bmp
  /// @param inname 用于转换的png路径(包含文件名及后缀)
  /// @param outname 转换完的bmp路径(包含文件名及后缀)
  /// @param format 转换成bmp的文件格式
  /// {8:RGB888, 5:ARGB555}
  /// @return:
  /// SUCCESS(0) : 成功
  int Png2Bmp(
    ffi.Pointer<ffi.Char> inname,
    ffi.Pointer<ffi.Char> outname,
    int format,
  ) {
    return _Png2Bmp(
      inname,
      outname,
      format,
    );
  }

  late final _Png2BmpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('Png2Bmp');
  late final _Png2Bmp = _Png2BmpPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  /// @brief PNG图片32/24位转16位
  /// @param inname 用于转换的png路径(包含文件名及后缀)
  /// @param outname 转换完的png路径(包含文件名及后缀)
  /// @return:
  /// SUCCESS(0) : 成功
  int PngConvert16bit(
    ffi.Pointer<ffi.Char> inname,
    ffi.Pointer<ffi.Char> outname,
  ) {
    return _PngConvert16bit(
      inname,
      outname,
    );
  }

  late final _PngConvert16bitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('PngConvert16bit');
  late final _PngConvert16bit = _PngConvert16bitPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// @brief 制作壁纸图片文件
  /// @param file_path 素材路径
  /// @param save_file_path 输出文件名
  /// @param format 预留
  /// @return:
  /// SUCCESS(0) : 成功
  int mkPhotoFile(
    ffi.Pointer<ffi.Char> file_path,
    ffi.Pointer<ffi.Char> save_file_path,
    int format,
  ) {
    return _mkPhotoFile(
      file_path,
      save_file_path,
      format,
    );
  }

  late final _mkPhotoFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('mkPhotoFile');
  late final _mkPhotoFile = _mkPhotoFilePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  /// @brief 制作联系人文件 v2_conta.ml
  /// @param jsondata json数据
  /// {
  /// 当前文件保存的年 ：year , month , day , hour , minute , second
  /// 联系人详情个数     ：contact_item_num
  /// 联系人详情            ：items
  /// 联系人详情姓名     ：name
  /// 纤细人详情号码     ：phone
  /// }
  /// @return 成功：生成的联系人文件路径(持久化路径目录+v2_conta.ml) 失败：NULL / 字符串 file_is_null
  ffi.Pointer<ffi.Char> mkConnactFile(
    ffi.Pointer<ffi.Char> jsondata,
  ) {
    return _mkConnactFile(
      jsondata,
    );
  }

  late final _mkConnactFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>)>>('mkConnactFile');
  late final _mkConnactFile = _mkConnactFilePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  /// @brief 制作思澈表盘文件,会在输入路径下生成(.watch)表盘文件
  /// @param file_path 素材文件路径
  /// @return 0成功 非0失败 -1: 没有控件 -2: json文件加载失败
  int mkSifliDialFile(
    ffi.Pointer<ffi.Char> file_path,
  ) {
    return _mkSifliDialFile(
      file_path,
    );
  }
